updated to Java 9, fixed language packs for plugins